--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "formik": "^2.4.6",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
